--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "getallgithubgists",
   "version": "1.0.0",
-  "description": "",
+  "description": "Get all the github gists.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "bhaireshm",
+  "license": "ISC",
+  "dependencies": {
+    "prompt": "^1.3.0"
+  }
 }
